[gd_scene load_steps=14 format=3 uid="uid://dvqu81j65chtr"]

[ext_resource type="Script" path="res://car.gd" id="1_caus5"]
[ext_resource type="Script" path="res://engine_sound.gd" id="2_460mh"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_6kj2t"]
friction = 0.0

[sub_resource type="Curve" id="Curve_xj7gq"]
_data = [Vector2(0, 0.846154), 0.0, 0.0, 0, 0, Vector2(0.849162, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.769231), -2.32468, 0.0, 0, 0]
point_count = 3

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cubaa"]
albedo_color = Color(0, 0, 1, 1)
emission_enabled = true
emission = Color(0, 0, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_kllov"]
material = SubResource("StandardMaterial3D_cubaa")
size = Vector3(0.2, 0.2, 0.2)

[sub_resource type="BoxMesh" id="BoxMesh_6o75p"]
material = SubResource("StandardMaterial3D_cubaa")
size = Vector3(0.2, 0.2, 0.2)

[sub_resource type="BoxMesh" id="BoxMesh_vck46"]
material = SubResource("StandardMaterial3D_cubaa")
size = Vector3(0.2, 0.2, 0.2)

[sub_resource type="BoxMesh" id="BoxMesh_lwc4r"]
material = SubResource("StandardMaterial3D_cubaa")
size = Vector3(0.2, 0.2, 0.2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_x1fb3"]
albedo_color = Color(1, 1, 0, 1)
emission_enabled = true
emission = Color(1, 1, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_of16e"]
material = SubResource("StandardMaterial3D_x1fb3")
size = Vector3(0.1, 0.1, 0.1)

[sub_resource type="AudioStreamGenerator" id="AudioStreamGenerator_2vce4"]
buffer_length = 0.05

[sub_resource type="Curve" id="Curve_hu4ml"]
_data = [Vector2(0, 0), 0.0, 3.54642, 0, 1, Vector2(0.151832, 0.538462), 0.104945, 0.104945, 0, 0, Vector2(0.685864, 1), 0.0, 0.0, 0, 0, Vector2(0.764398, 1), 0.0, 0.0, 0, 0, Vector2(0.926702, 0.659341), -4.10654, -4.10654, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 6

[node name="Car" type="RigidBody3D"]
collision_layer = 2
collision_mask = 3
mass = 800.0
physics_material_override = SubResource("PhysicsMaterial_6kj2t")
center_of_mass_mode = 1
center_of_mass = Vector3(0, 0.5, 0)
inertia = Vector3(600, 600, 600)
can_sleep = false
contact_monitor = true
linear_damp_mode = 1
angular_damp_mode = 1
script = ExtResource("1_caus5")
torque_curve = SubResource("Curve_xj7gq")

[node name="BodyCollision" type="CollisionPolygon3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)
depth = 2.0
polygon = PackedVector2Array(1.5, 0, 2.5, 0.2, 2.5, 1, -2.5, 0.5, -2.5, 0.2, -1.5, 0)

[node name="CockpitCollision" type="CollisionPolygon3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)
depth = 3.0
polygon = PackedVector2Array(0.5, 0.2, -0.5, 0.2, -0.2, 1, 0.2, 1)

[node name="BumperCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, -2)

[node name="FollowCameraPivot" type="Node3D" parent="."]

[node name="FollowCamera" type="Camera3D" parent="FollowCameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 6)
current = true

[node name="DebugContact" type="Node" parent="."]

[node name="FL" type="MeshInstance3D" parent="DebugContact"]
visible = false
mesh = SubResource("BoxMesh_kllov")

[node name="FR" type="MeshInstance3D" parent="DebugContact"]
visible = false
mesh = SubResource("BoxMesh_6o75p")
skeleton = NodePath("../RL")

[node name="RL" type="MeshInstance3D" parent="DebugContact"]
visible = false
mesh = SubResource("BoxMesh_vck46")
skeleton = NodePath("../RR")

[node name="RR" type="MeshInstance3D" parent="DebugContact"]
visible = false
mesh = SubResource("BoxMesh_lwc4r")
skeleton = NodePath("../FL")

[node name="DebugSpring" type="Node" parent="."]

[node name="FL" type="MeshInstance3D" parent="DebugSpring"]
visible = false
mesh = SubResource("BoxMesh_of16e")

[node name="FR" type="MeshInstance3D" parent="DebugSpring"]
visible = false
mesh = SubResource("BoxMesh_of16e")

[node name="RL" type="MeshInstance3D" parent="DebugSpring"]
visible = false
mesh = SubResource("BoxMesh_of16e")

[node name="RR" type="MeshInstance3D" parent="DebugSpring"]
visible = false
mesh = SubResource("BoxMesh_of16e")

[node name="FollowCameraReset" type="Timer" parent="."]
one_shot = true

[node name="EngineSound" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 1)
stream = SubResource("AudioStreamGenerator_2vce4")
autoplay = true
script = ExtResource("2_460mh")
wave_shape = SubResource("Curve_hu4ml")

[connection signal="timeout" from="FollowCameraReset" to="." method="_on_follow_camera_reset_timeout"]
